delint some code